4. Filter the Data

--- a/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
+++ b/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
@@ -403,8 +403,8 @@
        "2013          200\n",
        "01/2014        43\n",
        "12/2013        40\n",
-       "09/2013        34\n",
        "Not Stated     34\n",
+       "09/2013        34\n",
        "06/2013        27\n",
        "07/2013        22\n",
        "10/2013        20\n",
@@ -412,18 +412,18 @@
        "08/2013        12\n",
        "05/2013         7\n",
        "05/2012         6\n",
-       "04/2014         2\n",
-       "08/2012         2\n",
-       "02/2014         2\n",
        "07/2014         2\n",
+       "02/2014         2\n",
        "04/2013         2\n",
+       "08/2012         2\n",
+       "04/2014         2\n",
+       "2014            1\n",
+       "11/2012         1\n",
        "2010            1\n",
        "09/2014         1\n",
-       "07/2012         1\n",
-       "11/2012         1\n",
-       "2014            1\n",
-       "09/2010         1\n",
        "07/2006         1\n",
+       "09/2010         1\n",
+       "07/2012         1\n",
        "Name: Cease Date, dtype: int64"
       ]
      },
@@ -454,41 +454,41 @@
        "2009          24\n",
        "2006          23\n",
        "1975          21\n",
-       "1970          21\n",
        "2013          21\n",
+       "1970          21\n",
        "2005          20\n",
        "1990          20\n",
        "1999          19\n",
        "1996          19\n",
-       "2004          18\n",
-       "1992          18\n",
        "1991          18\n",
        "2000          18\n",
+       "2004          18\n",
+       "1992          18\n",
        "1989          17\n",
-       "1978          15\n",
-       "2003          15\n",
        "1976          15\n",
+       "1978          15\n",
        "2002          15\n",
+       "2003          15\n",
        "1988          15\n",
-       "1997          14\n",
        "1998          14\n",
+       "1997          14\n",
        "1980          14\n",
-       "1995          14\n",
        "1974          14\n",
        "1979          14\n",
+       "1995          14\n",
        "1993          13\n",
        "1972          12\n",
        "1986          12\n",
        "1977          11\n",
-       "1994          10\n",
-       "1971          10\n",
        "1984          10\n",
-       "2001          10\n",
+       "1971          10\n",
        "1969          10\n",
-       "1983           9\n",
+       "1994          10\n",
+       "2001          10\n",
        "1981           9\n",
-       "1985           8\n",
+       "1983           9\n",
        "1973           8\n",
+       "1985           8\n",
        "1987           7\n",
        "1982           4\n",
        "1963           4\n",
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2fa97280",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1264,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "dd73fb1b",
    "metadata": {},
    "outputs": [
@@ -1320,10 +1320,10 @@
        "      <th>Contributing Factors. Ill Health</th>\n",
        "      <th>Contributing Factors. Maternity/Family</th>\n",
        "      <th>...</th>\n",
-       "      <th>Workplace. Topic:Does your workplace promote a work culture free from all forms of unlawful discrimination?</th>\n",
-       "      <th>Workplace. Topic:Does your workplace promote and practice the principles of employment equity?</th>\n",
-       "      <th>Workplace. Topic:Does your workplace value the diversity of its employees?</th>\n",
-       "      <th>Workplace. Topic:Would you recommend the Institute as an employer to others?</th>\n",
+       "      <th>Contributing Factors. Study</th>\n",
+       "      <th>Contributing Factors. Travel</th>\n",
+       "      <th>Contributing Factors. Other</th>\n",
+       "      <th>Contributing Factors. NONE</th>\n",
        "      <th>gender</th>\n",
        "      <th>age</th>\n",
        "      <th>employment_status</th>\n",
@@ -1346,10 +1346,10 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Female</td>\n",
        "      <td>26  30</td>\n",
        "      <td>Temporary Full-time</td>\n",
@@ -1370,10 +1370,10 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1394,10 +1394,10 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>NONE</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1418,10 +1418,10 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Travel</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1442,10 +1442,10 @@
        "      <td>-</td>\n",
        "      <td>-</td>\n",
        "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
        "      <td>Male</td>\n",
        "      <td>41  45</td>\n",
        "      <td>Permanent Full-time</td>\n",
@@ -1455,7 +1455,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 72 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1501,59 +1501,31 @@
        "3                                -                                      -   \n",
        "4                                -                                      -   \n",
        "\n",
-       "   ...  \\\n",
-       "0  ...   \n",
-       "1  ...   \n",
-       "2  ...   \n",
-       "3  ...   \n",
-       "4  ...   \n",
+       "   ... Contributing Factors. Study Contributing Factors. Travel  \\\n",
+       "0  ...                         NaN                          NaN   \n",
+       "1  ...                           -                       Travel   \n",
+       "2  ...                           -                            -   \n",
+       "3  ...                           -                       Travel   \n",
+       "4  ...                           -                            -   \n",
        "\n",
-       "  Workplace. Topic:Does your workplace promote a work culture free from all forms of unlawful discrimination?  \\\n",
-       "0                                                Yes                                                            \n",
-       "1                                                Yes                                                            \n",
-       "2                                                Yes                                                            \n",
-       "3                                                Yes                                                            \n",
-       "4                                                Yes                                                            \n",
+       "  Contributing Factors. Other Contributing Factors. NONE  gender     age  \\\n",
+       "0                         NaN                        NaN  Female  26  30   \n",
+       "1                           -                          -     NaN     NaN   \n",
+       "2                           -                       NONE     NaN     NaN   \n",
+       "3                           -                          -     NaN     NaN   \n",
+       "4                           -                          -    Male  41  45   \n",
        "\n",
-       "  Workplace. Topic:Does your workplace promote and practice the principles of employment equity?  \\\n",
-       "0                                                Yes                                               \n",
-       "1                                                Yes                                               \n",
-       "2                                                Yes                                               \n",
-       "3                                                Yes                                               \n",
-       "4                                                Yes                                               \n",
+       "     employment_status                 position institute_service role_service  \n",
+       "0  Temporary Full-time      Administration (AO)               1-2          1-2  \n",
+       "1                  NaN                      NaN               NaN          NaN  \n",
+       "2                  NaN                      NaN               NaN          NaN  \n",
+       "3                  NaN                      NaN               NaN          NaN  \n",
+       "4  Permanent Full-time  Teacher (including LVT)               3-4          3-4  \n",
        "\n",
-       "  Workplace. Topic:Does your workplace value the diversity of its employees?  \\\n",
-       "0                                                Yes                           \n",
-       "1                                                Yes                           \n",
-       "2                                                Yes                           \n",
-       "3                                                Yes                           \n",
-       "4                                                Yes                           \n",
-       "\n",
-       "  Workplace. Topic:Would you recommend the Institute as an employer to others?  \\\n",
-       "0                                                Yes                             \n",
-       "1                                                Yes                             \n",
-       "2                                                Yes                             \n",
-       "3                                                Yes                             \n",
-       "4                                                Yes                             \n",
-       "\n",
-       "   gender     age    employment_status                 position  \\\n",
-       "0  Female  26  30  Temporary Full-time      Administration (AO)   \n",
-       "1     NaN     NaN                  NaN                      NaN   \n",
-       "2     NaN     NaN                  NaN                      NaN   \n",
-       "3     NaN     NaN                  NaN                      NaN   \n",
-       "4    Male  41  45  Permanent Full-time  Teacher (including LVT)   \n",
-       "\n",
-       "  institute_service role_service  \n",
-       "0               1-2          1-2  \n",
-       "1               NaN          NaN  \n",
-       "2               NaN          NaN  \n",
-       "3               NaN          NaN  \n",
-       "4               3-4          3-4  \n",
-       "\n",
-       "[5 rows x 72 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,9 +1541,146 @@
     "'LengthofServiceOverall. Overall Length of Service at Institute (in years)': 'institute_service',\n",
     "'LengthofServiceCurrent. Length of Service at current workplace (in years)': 'role_service'}\n",
     "\n",
-    "tafe_survey.rename(columns=rename_columns, inplace=True)\n",
+    "tafe_survey_updated.rename(columns=rename_columns, inplace=True)\n",
     "\n",
-    "tafe_survey.head()"
+    "tafe_survey_updated.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10db536b",
+   "metadata": {},
+   "source": [
+    "## Filter the Data\n",
+    "\n",
+    "For this project, we'll only analyze survey respondents who resigned, so their separation type contains the string 'Resignation'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "85fa34bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age Retirement                          285\n",
+       "Resignation-Other reasons               150\n",
+       "Resignation-Other employer               91\n",
+       "Resignation-Move overseas/interstate     70\n",
+       "Voluntary Early Retirement (VER)         67\n",
+       "Ill Health Retirement                    61\n",
+       "Other                                    49\n",
+       "Contract Expired                         34\n",
+       "Termination                              15\n",
+       "Name: separationtype, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_survey_updated['separationtype'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "912f56e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Resignation                 340\n",
+       "Contract Expired            127\n",
+       "Retrenchment/ Redundancy    104\n",
+       "Retirement                   82\n",
+       "Transfer                     25\n",
+       "Termination                  23\n",
+       "Name: separationtype, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_survey_updated['separationtype'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "243f3359",
+   "metadata": {},
+   "source": [
+    "Note that dete_survey_updated dataframe contains multiple separation types with the string 'Resignation':\n",
+    "\n",
+    "- `Resignation-Other reasons`\n",
+    "- `Resignation-Other employer`\n",
+    "- `Resignation-Move overseas/interstate`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "994facf6",
+   "metadata": {},
+   "source": [
+    "In each of dataframes, we'll select only the data for survey respondents who have a `Resignation` separation type.\n",
+    "\n",
+    "For DETE survey we'll use the [`pd.Series.str.find`](https://pandas.pydata.org/docs/reference/api/pandas.Series.str.find.html) function to filter values that contains the `Resignation` string value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4d37539b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Resignation-Other reasons               150\n",
+       "Resignation-Other employer               91\n",
+       "Resignation-Move overseas/interstate     70\n",
+       "Name: separationtype, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_resignations = dete_survey_updated[dete_survey_updated['separationtype'].str.find('Resignation') != -1].copy()\n",
+    "dete_resignations['separationtype'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7827546c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Resignation    340\n",
+       "Name: separationtype, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations = tafe_survey_updated[tafe_survey_updated['separationtype'] == 'Resignation'].copy()\n",
+    "tafe_resignations['separationtype'].value_counts()"
    ]
   }
  ],
