6. Create a New Column

--- a/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
+++ b/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
@@ -1678,17 +1678,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75c4522f",
+   "id": "c336c146",
    "metadata": {},
    "source": [
-    "# Verify the Data\n",
+    "## Verify the Data\n",
     "\n",
     "Now, before we start cleaning and manipulating the rest of our data, let's verify that the data doesn't contain any major inconsistencies (to the best of our knowledge). "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16cd4614",
+   "id": "7ad9cde5",
    "metadata": {},
    "source": [
     "We'll first clean the `cease_date` column in `dete_resignations`. We'll only want to work with the year value."
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3b45d0cb",
+   "id": "675d9d6e",
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "014d3779",
+   "id": "bd4a327b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1f072e4b",
+   "id": "95b36cc4",
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7123e379",
+   "id": "6ed2f421",
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1796,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9ce0fc34",
+   "id": "7f53fd0e",
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "37df4492",
+   "id": "bd2bbdf8",
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1882,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "51c09095",
+   "id": "4efb5cc4",
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8279c464",
+   "id": "117b3fe3",
    "metadata": {},
    "outputs": [
     {
@@ -1931,10 +1931,90 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3304d2b5",
+   "id": "75ea41d7",
    "metadata": {},
    "source": [
     "There aren't any major issues with the years."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02a41c5c",
+   "metadata": {},
+   "source": [
+    "## Create a New Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68b56db6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "69af7b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0     23\n",
+       "1.0     22\n",
+       "0.0     20\n",
+       "3.0     20\n",
+       "6.0     17\n",
+       "4.0     16\n",
+       "2.0     14\n",
+       "9.0     14\n",
+       "7.0     13\n",
+       "13.0     8\n",
+       "8.0      8\n",
+       "20.0     7\n",
+       "15.0     7\n",
+       "12.0     6\n",
+       "22.0     6\n",
+       "10.0     6\n",
+       "14.0     6\n",
+       "17.0     6\n",
+       "18.0     5\n",
+       "16.0     5\n",
+       "11.0     4\n",
+       "24.0     4\n",
+       "23.0     4\n",
+       "39.0     3\n",
+       "19.0     3\n",
+       "32.0     3\n",
+       "21.0     3\n",
+       "36.0     2\n",
+       "26.0     2\n",
+       "30.0     2\n",
+       "25.0     2\n",
+       "28.0     2\n",
+       "49.0     1\n",
+       "27.0     1\n",
+       "41.0     1\n",
+       "34.0     1\n",
+       "29.0     1\n",
+       "31.0     1\n",
+       "33.0     1\n",
+       "42.0     1\n",
+       "38.0     1\n",
+       "35.0     1\n",
+       "Name: institute_service, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_resignations['institute_service'] = dete_resignations['cease_date'] - dete_resignations['dete_start_date']\n",
+    "dete_resignations['institute_service'].value_counts()"
    ]
   }
  ],
