7. Identify Dissatisfied Employees

--- a/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
+++ b/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
@@ -405,8 +405,8 @@
        "2013          200\n",
        "01/2014        43\n",
        "12/2013        40\n",
-       "Not Stated     34\n",
        "09/2013        34\n",
+       "Not Stated     34\n",
        "06/2013        27\n",
        "07/2013        22\n",
        "10/2013        20\n",
@@ -414,18 +414,18 @@
        "08/2013        12\n",
        "05/2013         7\n",
        "05/2012         6\n",
-       "02/2014         2\n",
-       "04/2014         2\n",
        "04/2013         2\n",
-       "07/2014         2\n",
        "08/2012         2\n",
-       "09/2010         1\n",
-       "07/2006         1\n",
+       "04/2014         2\n",
+       "07/2014         2\n",
+       "02/2014         2\n",
+       "2014            1\n",
        "07/2012         1\n",
-       "2010            1\n",
+       "09/2010         1\n",
        "11/2012         1\n",
        "09/2014         1\n",
-       "2014            1\n",
+       "2010            1\n",
+       "07/2006         1\n",
        "Name: Cease Date, dtype: int64"
       ]
      },
@@ -455,40 +455,40 @@
        "2012          27\n",
        "2009          24\n",
        "2006          23\n",
+       "1975          21\n",
        "1970          21\n",
        "2013          21\n",
-       "1975          21\n",
        "2005          20\n",
        "1990          20\n",
        "1999          19\n",
        "1996          19\n",
        "1991          18\n",
-       "2004          18\n",
-       "1992          18\n",
        "2000          18\n",
+       "1992          18\n",
+       "2004          18\n",
        "1989          17\n",
        "2003          15\n",
        "1988          15\n",
+       "1976          15\n",
        "1978          15\n",
        "2002          15\n",
-       "1976          15\n",
-       "1979          14\n",
-       "1974          14\n",
-       "1980          14\n",
        "1997          14\n",
+       "1980          14\n",
        "1995          14\n",
+       "1974          14\n",
+       "1979          14\n",
        "1998          14\n",
        "1993          13\n",
-       "1986          12\n",
        "1972          12\n",
+       "1986          12\n",
        "1977          11\n",
+       "1969          10\n",
+       "1994          10\n",
+       "1971          10\n",
        "1984          10\n",
        "2001          10\n",
-       "1971          10\n",
-       "1994          10\n",
-       "1969          10\n",
-       "1983           9\n",
        "1981           9\n",
+       "1983           9\n",
        "1985           8\n",
        "1973           8\n",
        "1987           7\n",
@@ -496,8 +496,8 @@
        "1963           4\n",
        "1968           3\n",
        "1967           2\n",
-       "1966           1\n",
        "1965           1\n",
+       "1966           1\n",
        "Name: DETE Start Date, dtype: int64"
       ]
      },
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c336c146",
+   "id": "732bcbc7",
    "metadata": {},
    "source": [
     "## Verify the Data\n",
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad9cde5",
+   "id": "2d1190dd",
    "metadata": {},
    "source": [
     "We'll first clean the `cease_date` column in `dete_resignations`. We'll only want to work with the year value."
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "675d9d6e",
+   "id": "09259300",
    "metadata": {},
    "outputs": [
     {
@@ -1715,10 +1715,10 @@
        "08/2013      4\n",
        "05/2012      2\n",
        "05/2013      2\n",
+       "09/2010      1\n",
        "2010         1\n",
        "07/2006      1\n",
        "07/2012      1\n",
-       "09/2010      1\n",
        "Name: cease_date, dtype: int64"
       ]
      },
@@ -1734,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bd4a327b",
+   "id": "a75a45b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "95b36cc4",
+   "id": "90f513a1",
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6ed2f421",
+   "id": "23738e66",
    "metadata": {},
    "outputs": [
     {
@@ -1795,8 +1795,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7f53fd0e",
+   "execution_count": 22,
+   "id": "d66aa978",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
        "Name: dete_start_date, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1857,8 +1857,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "bd2bbdf8",
+   "execution_count": 23,
+   "id": "c488f40f",
    "metadata": {},
    "outputs": [
     {
@@ -1881,8 +1881,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "4efb5cc4",
+   "execution_count": 24,
+   "id": "a94b035e",
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1896,7 @@
        "Name: cease_date, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,8 +1907,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "117b3fe3",
+   "execution_count": 25,
+   "id": "9e95516e",
    "metadata": {},
    "outputs": [
     {
@@ -1931,7 +1931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75ea41d7",
+   "id": "4585afd9",
    "metadata": {},
    "source": [
     "There aren't any major issues with the years."
@@ -1939,24 +1939,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02a41c5c",
+   "id": "951ddf26",
    "metadata": {},
    "source": [
-    "## Create a New Column"
+    "## Create a New Column\n",
+    "\n",
+    "The tafe_resignations dataframe already contains a \"service\" column, which we renamed to institute_service. In order to analyze both surveys together, we'll have to create a corresponding institute_service column in dete_resignations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "68b56db6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "69af7b61",
+   "execution_count": 26,
+   "id": "50acfac2",
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +2001,7 @@
        "Name: institute_service, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2015,6 +2009,234 @@
    "source": [
     "dete_resignations['institute_service'] = dete_resignations['cease_date'] - dete_resignations['dete_start_date']\n",
     "dete_resignations['institute_service'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deeb92ef",
+   "metadata": {},
+   "source": [
+    "## Identify Dissatisfied Employees\n",
+    "\n",
+    " We'll identify any employees who resigned because they were dissatisfied.\n",
+    " \n",
+    " Below are the columns we'll use to categorize employees as \"dissatisfied\" from each dataframe. \n",
+    "\n",
+    "`tafe_resignations`:\n",
+    "- Contributing Factors. Dissatisfaction\n",
+    "- Contributing Factors. Job Dissatisfaction\n",
+    "\n",
+    "`dete_resignations`:\n",
+    "- job_dissatisfaction\n",
+    "- dissatisfaction_with_the_department\n",
+    "- physical_work_environment\n",
+    "- lack_of_recognition\n",
+    "- lack_of_job_security\n",
+    "- work_location\n",
+    "- employment_conditions\n",
+    "- work_life_balance\n",
+    "- workload"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b20ec99",
+   "metadata": {},
+   "source": [
+    "We'll transfrms values of We'll transform the values of the columns of tafe_resignations  we'll use into boolean values.the columns we'll us into boolean values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a73415df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-                                         277\n",
+       "Contributing Factors. Dissatisfaction      55\n",
+       "Name: Contributing Factors. Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a5b3bdd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-                      270\n",
+       "Job Dissatisfaction     62\n",
+       "Name: Contributing Factors. Job Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Job Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b3ff1d",
+   "metadata": {},
+   "source": [
+    "We'll define a `update_vals`  function that transforms values of the `Contributing Factors. Dissatisfaction`, `Contributing Factors. Job Dissatisfaction` columns in `tafe_resignations`.\n",
+    "- If the value is NaN, return np.nan. You can use the following criteria to check that a value is NaN: pd.isnull(val).\n",
+    "- If the value is '-', return False.\n",
+    "- For any other value, return True."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "588a008d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_vals(value):\n",
+    "    if pd.isnull(value):\n",
+    "        return np.nan\n",
+    "    if value == '-':\n",
+    "        return False\n",
+    "    \n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5e210644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tafe_resignations['Contributing Factors. Dissatisfaction'] = tafe_resignations['Contributing Factors. Dissatisfaction'].apply(update_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "92995417",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tafe_resignations['Contributing Factors. Job Dissatisfaction'] = tafe_resignations['Contributing Factors. Job Dissatisfaction'].apply(update_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ea1ec922",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    277\n",
+       "True      55\n",
+       "Name: Contributing Factors. Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b93f4cef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    270\n",
+       "True      62\n",
+       "Name: Contributing Factors. Job Dissatisfaction, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tafe_resignations['Contributing Factors. Job Dissatisfaction'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "38469f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    249\n",
+       "True      91\n",
+       "Name: dissatisfied, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_resignations = ['Contributing Factors. Dissatisfaction', 'Contributing Factors. Job Dissatisfaction']\n",
+    "tafe_resignations['dissatisfied'] = tafe_resignations[columns_resignations].any(axis=1)\n",
+    "tafe_resignations_up = tafe_resignations.copy()\n",
+    "tafe_resignations_up['dissatisfied'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c5341579",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    162\n",
+       "True     149\n",
+       "Name: dissatisfied, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_resignations = ['job_dissatisfaction', 'dissatisfaction_with_the_department',\n",
+    "                       'physical_work_environment', 'lack_of_recognition', 'lack_of_job_security',\n",
+    "                       'work_location', 'employment_conditions', 'work_life_balance', 'workload']\n",
+    "dete_resignations['dissatisfied'] = dete_resignations[columns_resignations].any(axis=1)\n",
+    "dete_resignations_up = dete_resignations.copy()\n",
+    "dete_resignations_up['dissatisfied'].value_counts()"
    ]
   }
  ],
